--- a/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
+++ b/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
@@ -48,3 +48,10 @@ pipeline:
                       ssl: true
                     tool:
                       project_key: python-flask-project
+              - step:
+                  type: Run
+                  name: get quality gate
+                  identifier: get_quality_gate
+                  spec:
+                    shell: Bash
+                    command: "curl -k -u ${<+secrets.getValue(\"org.sonar-global-token\")}: -G --data-urlencode --data-urlencode http://35.206.188.23:9000/api/qualitygates/project_status?projectKey=${python-flask-project}"
