Update pipeline Mission14

--- a/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
+++ b/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
@@ -55,7 +55,7 @@ pipeline:
                   spec:
                     shell: Bash
                     command: |-
-                      token = <+secrets.getValue("org.sonar-gloabl-token")
+                      token = <+secrets.getValue("org.sonar-global-token")
                       echo "Token"
                       echo ${token}
                       curl -k -u ${token}: -G --data-urlencode --data-urlencode http://35.206.188.23:9000/api/qualitygates/project_status?projectKey=python-flask-project
