Update pipeline Mission14

--- a/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
+++ b/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
@@ -9,6 +9,7 @@ pipeline:
       codebase:
         connectorRef: Mission14_Connector
         build: <+input>
+        sparseCheckout: []
   stages:
     - stage:
         name: scan python-flask codebase
@@ -41,6 +42,7 @@ pipeline:
                     advanced:
                       log:
                         level: info
+                      fail_on_severity: low
                     connectorRef: account.harnessImage
                     auth:
                       access_token: <+secrets.getValue("org.sonar-global-token")>
