Update pipeline Mission14

--- a/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
+++ b/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
@@ -45,7 +45,7 @@ pipeline:
                       fail_on_severity: low
                     connectorRef: account.harnessImage
                     auth:
-                      access_token: <+secrets.getValue("project.SQ_MAY_USER")>
+                      access_token: <+secrets.getValue("SQ_MAY_USER")>
                       domain: http://35.206.188.23:9000/
                       ssl: true
                     tool:
