Update pipeline Mission14

--- a/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
+++ b/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
@@ -57,7 +57,7 @@ pipeline:
                   spec:
                     shell: Bash
                     command: |-
-                      token='<+secrets.getValue("sq_may_user")'
+                      token='<+secrets.getValue("SQ_MAY_USER")'
                       echo "Token"
                       echo $token
                       curl -k -u ${token}: -G --data-urlencode --data-urlencode http://35.206.188.23:9000/api/qualitygates/project_status?projectKey=python-flask-project
