--- a/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
+++ b/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Mission14.yaml
@@ -41,7 +41,7 @@ pipeline:
                       detection: auto
                     advanced:
                       log:
-                        level: info
+                        level: debug
                       fail_on_severity: low
                     connectorRef: account.harnessImage
                     auth:
@@ -60,4 +60,4 @@ pipeline:
                       token='<+secrets.getValue("SQ_MAY_USER")'
                       echo "Token"
                       echo $token
-                      curl -k -u ${token}: -G --data-urlencode --data-urlencode http://35.206.188.23:9000/api/qualitygates/project_status?projectKey=python-flask-project
+                      curl -k -u $token: -G --data-urlencode --data-urlencode http://35.206.188.23:9000/api/qualitygates/project_status?projectKey=python-flask-project
